plugins {
  id 'java'
}

group = 'io.event-driven'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

dependencies {
  // Serialisation
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'

  // EventStoreDB client
  implementation 'com.eventstore:db-client-java:3.0.1'

  // Occurrent
  implementation 'org.occurrent:application-service-blocking:0.14.4'
  implementation 'org.occurrent:cloudevent-converter-jackson:0.14.4'
  implementation 'org.occurrent:eventstore-inmemory:0.14.4'
  implementation 'org.occurrent:query-dsl-blocking:0.14.4'
  implementation 'org.occurrent:command-composition:0.14.4'

  // Logging
  implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
  implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
  implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'

  // Stream
  implementation 'one.util:streamex:0.8.1'

  // Test frameworks
  implementation 'junit:junit:4.13.2'
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
  testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
  testImplementation 'org.assertj:assertj-core:3.23.1'
}

tasks.named('test') {
  useJUnitPlatform {
    excludeTags 'Exercise'
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
  jvmArgs += "--enable-preview"
}

test {
  testLogging.showStandardStreams = true
  testLogging.exceptionFormat = 'full'
}
